--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ font-family: 'Karla', sans-serif; */
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Karla', sans-serif;
 }
 /* ==========================================NAV BAR========================================= */
 nav {
@@ -28,7 +29,7 @@ nav a:hover {
 }
 /* ============VIEW PLANS========== */
 nav li:last-child a {
-    border: 2px solid black;
+    border: 1px solid black;
     padding: 5px 10px;
     color: black;
 }
@@ -36,5 +37,65 @@ nav li:last-child a:hover {
     background-color: black;
     color: white;
 }
+/* ==========================================MAIN========================================= */
+/* ============INTRO========== */
+#intro {
+    background-color: rgb(44,39,63);
+    color: white;
+    height: 70vh;
+    padding: 50px 100px;
+    position: relative;
+    /* overflow: hidden; */
+}
+#bg-pattern-intro-left {
+    position: absolute;
+    top: 300px;
+    left: -20px;
+}
+#bg-pattern-intro-right {
+    position: absolute;
+    bottom: 150px;
+    right: 0px;
+    z-index: 1;
+    overflow: hidden;
+}
+#family {
+    position: absolute;
+    top: 100px;
+    right: 200px;
+    /* width: 35%; */
+    width: 450px;
+    /* height: auto; */
+}
 
-
+#intro h2 {
+    font-family: 'DM Serif Display', serif;
+    font-size: 3rem;
+    font-weight: 400;
+    line-height: 1;
+    position: relative;
+}
+#intro h2::before {
+    position: absolute;
+    top: -30px;
+    content: " ";
+    height: 1px;
+    width: 100px;
+    background-color: white;
+}
+#intro p {
+    width: 50%;
+    margin: 40px 0;
+    line-height: 1.5;
+}
+#intro a {
+    border: 1px solid white;
+    padding: 5px 10px;
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+#intro a:hover {
+    background-color: white;
+    color: black;
+}
