--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,9 @@
 /* font-family: 'DM Serif Display', serif;
 font-family: 'Karla', sans-serif; */
 
+* {
+    font-weight: 400;
+}
 body {
     margin: 0;
     padding: 0;
@@ -30,7 +33,6 @@ nav a:hover {
 /* ============VIEW PLANS========== */
 nav li:last-child a {
     border: 1px solid black;
-    padding: 5px 10px;
     color: black;
 }
 nav li:last-child a:hover {
@@ -38,6 +40,31 @@ nav li:last-child a:hover {
     color: white;
 }
 /* ==========================================MAIN========================================= */
+/* ============UTILITY CLASSES========== */
+.big-header {
+    font-size: 3rem;
+    font-family: 'DM Serif Display', serif;
+    position: relative;
+}
+.line-before::before {
+    position: absolute;
+    top: -30px;
+    content: " ";
+    height: 1px;
+    width: 100px;
+    background-color: white;
+}
+.btn {
+    border: 1px solid white;
+    padding: 5px 10px;
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+.btn:hover {
+    background-color: white;
+    color: black;
+}
 /* ============INTRO========== */
 #intro {
     background-color: rgb(44,39,63);
@@ -63,25 +90,10 @@ nav li:last-child a:hover {
     position: absolute;
     top: 100px;
     right: 200px;
-    /* width: 35%; */
     width: 450px;
-    /* height: auto; */
 }
-
 #intro h2 {
-    font-family: 'DM Serif Display', serif;
-    font-size: 3rem;
-    font-weight: 400;
     line-height: 1;
-    position: relative;
-}
-#intro h2::before {
-    position: absolute;
-    top: -30px;
-    content: " ";
-    height: 1px;
-    width: 100px;
-    background-color: white;
 }
 #intro p {
     width: 50%;
@@ -89,13 +101,54 @@ nav li:last-child a:hover {
     line-height: 1.5;
 }
 #intro a {
-    border: 1px solid white;
-    padding: 5px 10px;
+    border-color: white;
     color: white;
-    text-decoration: none;
-    text-transform: uppercase;
 }
 #intro a:hover {
     background-color: white;
     color: black;
+}
+/* ============MAIN========== */
+section {
+    padding: 50px 100px;
+}
+section .line-before::before {
+    background-color: black;
+}
+section article {
+    width: 30%;
+    display: inline-block;
+}
+section article img {
+    width: 50px;
+}
+#cards {
+    display: flex;
+    justify-content: space-between;
+}
+#cards p {
+    color: rgb(156,154,159);
+    line-height: 1.5;
+}
+#cards h3 {
+    font-family: 'DM Serif Display', serif;
+}
+/* ============HOW WE WORK========== */
+#how-we-work {
+    position: relative;
+    width: 100%;
+    color: white;
+    background: rgb(44,39,63) url(/assets/images/bg-pattern-how-we-work-desktop.svg) right top no-repeat;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 150px auto;
+    padding: 10px 50px;
+    box-sizing: border-box;
+}
+#how-we-work img{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 400px;
 }
