--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,7 +154,7 @@ section article img {
 /* ==========================================FOOTER========================================= */
 footer {
     height: 40vh;
-    background: url(/assets/images/bg-pattern-footer-desktop.svg) 0% -100% no-repeat;
+    background: url(/assets/images/bg-pattern-footer-desktop.svg) 0% -30% no-repeat;
     background-color: rgb(250,250,250);
     padding: 50px 100px;
 }
@@ -163,6 +163,7 @@ footer {
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid rgb(156,154,159);
+    padding-bottom: 20px;
 }
 #social-media li {
     list-style-type: none;
@@ -174,12 +175,16 @@ footer {
     color: black;
 }
 
-/* #footer-nav {
+#footer-nav {
     display: flex;
     justify-content: space-between;
-} */
+    width: 80%;
+    margin-top: 20px;
+}
 #footer-nav ul {
-    display: inline-block;
+    /* display: inline-block; */
+
+    padding: 0;
 }
 #footer-nav li {
     list-style-type: none;
