--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,12 @@ body {
 }
 /* ==========================================NAV BAR========================================= */
 nav {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    background-color: white;
+    z-index: 1;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -72,6 +78,7 @@ nav li:last-child a:hover {
     padding: 50px 100px;
     position: relative;
     overflow: hidden;
+    margin-top: 50px;
 }
 #bg-pattern-intro-left {
     position: absolute;
